# DependencyChangeChecker

./: LICENSE  README.md  action.yml
dependency_change_checker/: pyproject.toml
dependency_change_checker/dependency_change_checker/: action.py
